--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -10,7 +10,7 @@
         <title>connexionS@SAC</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <h:outputStylesheet library="css" name="pfcrud.css" />
-        <link rel="shortcut icon" type="image/png" href="/images/iconApp.png" />
+        <link rel="shortcut icon" type="image/png" href="resources/images/iconApp.png" />
     </h:head>
     <h:body >
       
